--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,3 +22,7 @@ spring:
       baseline-on-migration: true
       enabled: true
       locations: classpath:db/migration
+
+#logging:
+#  level:
+#    root: DEBUG
