Coordinates parameter optional in point creation method

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,8 +26,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${KEYCLOAK_URL:http://localhost:8081}/realms/geogreen
-          jwk-set-uri: ${KEYCLOAK_URL:http://localhost:8081}/realms/geogreen/protocol/openid-connect/certs
+          issuer-uri: ${KEYCLOAK_URL:http://217.198.13.249:30096}/realms/geogreen
+          jwk-set-uri: ${KEYCLOAK_URL:http://217.198.13.249:30096}/realms/geogreen/protocol/openid-connect/certs
 
 logging:
   level:
